# Lyrico

./: README.md  SearchResultsScreen.kt  build.gradle.kts  gradle.properties
.github/workflows/: build-debug.yml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lyrico-app/: build.gradle.kts
lyrico-app/schemas/com.lonx.lyrico.data.LyricoDatabase/: 7.json  8.json  9.json
lyrico-app/src/main/: AndroidManifest.xml
lyrico-app/src/main/cpp/: CMakeLists.txt  ebur128.cpp  ebur128_jni.cpp
lyrico-app/src/main/cpp/ebur128/: ebur128.c
lyrico-app/src/main/java/com/lonx/lyrico/: App.kt  LyricoApp.kt  MainActivity.kt
lyrico-app/src/main/java/com/lonx/lyrico/data/: LyricoDatabase.kt  SharedSelectionManager.kt
lyrico-app/src/main/java/com/lonx/lyrico/data/model/: BatchMatchConfig.kt  CharacterMappingRule.kt  LocalSearchType.kt  LyricsSearchResult.kt  SearchConfig.kt  (+3 more)
lyrico-app/src/main/java/com/lonx/lyrico/di/: AppModule.kt
lyrico-app/src/main/java/com/lonx/lyrico/screens/: AboutScreen.kt  BatchEditScreen.kt  BatchMatchHistoryDetailScreen.kt  BatchMatchHistoryScreen.kt  BatchRenameScreen.kt  CharacterMappingScreen.kt  EditMetadataScreen.kt  FolderManagerScreen.kt  FolderSongsScreen.kt  OpenSourceLicenceScreen.kt  SearchCoverScreen.kt  SearchResultsScreen.kt  SearchSourcePriorityScreen.kt  SettingsScreen.kt  SongListScreen.kt
lyrico-app/src/main/java/com/lonx/lyrico/utils/: CacheManager.kt  LibEbuR128.kt  LyricDecoder.kt  LyricEncoder.kt  LyricFormatter.kt  LyricsUtils.kt  MediaScanner.kt  MusicScanner.kt  RenameEngine.kt  ReplayGainScanner.kt  UriUtils.kt
lyrico-app/src/main/java/com/lonx/lyrico/viewmodel/: BatchEditViewModel.kt  BatchLyricsFormatViewModel.kt  BatchMatchHistoryViewModel.kt  BatchMatchViewModel.kt  BatchRenameViewModel.kt  BatchReplayGainViewModel.kt  EditMetadataViewModel.kt  SearchViewModel.kt  SettingsViewModel.kt  SongListViewModel.kt  SortState.kt  StringUtils.kt
lyrico-app/src/main/res/drawable/: ic_filled_star_24dp.xml  ic_outline_star_24dp.xml  ic_timer_24dp.xml
lyrico-app/src/main/res/values/: strings.xml
lyrico-app/src/main/res/values-zh-rCN/: strings.xml
lyrico-audiotag/: .gitignore  build.gradle.kts
lyrico-audiotag/src/main/cpp/: CMakeLists.txt  FdIOStream.cpp  FdIOStream.h  build_taglib.sh  taglib_jni.cpp
lyrico-audiotag/src/main/java/com/lonx/audiotag/: TagLib.kt
lyrico-audiotag/src/main/java/com/lonx/audiotag/model/: AudioProperties.kt  AudioTagData.kt  Metadata.kt  Picture.kt
lyrico-audiotag/src/main/java/com/lonx/audiotag/rw/: AudioTagReader.kt  AudioTagWriter.kt
lyrico-lyrics/src/main/java/com/lonx/lyrics/model/: Lyrics.kt  SongSearchResult.kt
lyrico-lyrics/src/main/java/com/lonx/lyrics/utils/: KrcParser.kt  QrcParser.kt  SodaParser.kt  YrcParser.kt
(+31 files in other folders)
